# pangolin_plotter

./: CMakeLists.txt  main.cpp  package.xml  pangolin_plotter.cpp
include/: multi_camera_subscribers.hpp  pangolin_plotter.hpp  pose_subscribers.hpp  stereo_processor.h  vis_utils.hpp
launch/: pangolin_plotter.launch
